--- a/pom.xml
+++ b/pom.xml
@@ -94,14 +94,14 @@
             <groupId>com.github.SplitYoSis</groupId>
             <artifactId>MenuLib</artifactId>
             <version>1.1.7</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.SplitYoSis</groupId>
             <artifactId>CommandSystem</artifactId>
             <version>v1.2.2</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
